# inframan

./: .gitignore  CMakeLists.txt  CMakePresets.json  Justfile  Readme.md  test_debug.cpp  vcpkg.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: release.yml
configs/: app-config.hpp  group-config.hpp
docs/: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTE.md  ISSUES.md  SECURITY.md
include/: banner.hpp  context-manager.hpp  group-registry.hpp  hello.hpp  path-completer.hpp  status-processor.hpp
include/libraries/: linenoise.hpp  tfile.hpp
src/: CMakeLists.txt  hello.cpp  main.cpp
src/commands/: create-group.cpp  create-group.hpp  status-processor.cpp  version.hpp
src/commands/add-job/: add-job.cpp  add-job.hpp
src/commands/create-group/: create-group.cpp  create-group.hpp
src/commands/delete-group/: delete-group.cpp  delete-group.hpp
src/commands/delete-job/: delete-job.cpp  delete-job.hpp
src/commands/execute-job/: execute-job.cpp  execute-job.hpp
src/commands/list-group/: list-group.cpp  list-group.hpp
src/commands/read-job/: read-job.cpp  read-job.hpp
src/commands/run-group/: run-group.cpp  run-group.hpp
src/commands/status/: status.cpp  status.hpp
src/commands/stop-group/: stop-group.cpp  stop-group.hpp
src/commands/update-group/: update-group.cpp  update-group.hpp
src/commands/update-job/: update-job.cpp  update-job.hpp
src/commands/use-group/: use-group.cpp  use-group.hpp
src/commands/version/: version.hpp
